# SixDegrees

./: README.md
data/: unweighted_paths.tsv
src/: CMakeLists.txt  pathfinder.cpp
src/ActorGraph/: Actor.cpp  Actor.cpp~  Actor.hpp  Actor.hpp~  ActorGraph.cpp  ActorGraph.cpp~  ActorGraph.hpp  ActorGraph.hpp~  CMakeLists.txt
test/: CMakeLists.txt  test_Actor.cpp  test_ActorGraph.cpp
