add_executable (test_ActorGraph test_ActorGraph.cpp)
target_link_libraries(test_ActorGraph PRIVATE gtest_main actorgraph_dep)
add_test(test_ActorGraph test_ActorGraph)
add_executable (test_Actor test_Actor.cpp)
target_link_libraries(test_Actor PRIVATE gtest_main Actor)
add_test(test_Actor test_Actor)